js262/test/language/module-code/parse-err-decl-pos-export-block-stmt-list.js


/*---
description: Statement cannot contain an `export` declaration
esid: sec-modules
negative:
  phase: parse
  type: SyntaxError
flags: [module]
---*/

$DONOTEVALUATE();

{ void 0; export default null; }
